--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@ document.getElementById("jump").ontouchstart=()=>{
     player.onGround=false;
   }
 };
+
+if ("serviceWorker" in navigator) {
+ navigator.serviceWorker.register("sw.js");
+}
 </script>
 
 </body>
