--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ canvas{
   display:block;
 }
 
+/* ================= BOTÕES ================= */
 .btn{
   position:fixed;
   width:70px;
@@ -65,15 +66,15 @@ canvas{
   border-radius:50%;
 }
 
-/* Rikcat (P1) */
+/* P1 – Rikcat (esquerda) */
 #left{bottom:20px; left:20px;}
 #right{bottom:20px; left:110px;}
-#jump{bottom:20px; right:20px;}
+#jump{bottom:20px; left:200px;}
 
-/* EduKat (P2) */
-#left2{bottom:110px; right:200px;}
-#right2{bottom:110px; right:110px;}
-#jump2{bottom:20px; right:110px;}
+/* P2 – EduKat (direita) */
+#left2{bottom:20px; right:200px;}
+#right2{bottom:20px; right:110px;}
+#jump2{bottom:20px; right:20px;}
 </style>
 </head>
 
