--- a/index.html
+++ b/index.html
@@ -2,106 +2,53 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Rikcat Adventure</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 <style>
 body{
   margin:0;
   overflow:hidden;
-  background:#6aa5ff;
-  font-family:sans-serif;
+  background:#5c94fc;
 }
-
-#titleScreen{
-  position:fixed;
-  inset:0;
-  background:#6aa5ff;
-  display:flex;
-  flex-direction:column;
-  align-items:center;
-  justify-content:center;
-  gap:15px;
-  z-index:10;
-}
-
-#titleScreen h1{
-  color:white;
-  font-size:42px;
-}
-
-#titleScreen button{
-  font-size:22px;
-  padding:12px 30px;
-  border-radius:10px;
-  border:none;
-}
-
-#rotate{
-  display:none;
-  position:fixed;
-  inset:0;
-  background:black;
-  color:white;
-  font-size:30px;
-  align-items:center;
-  justify-content:center;
-  z-index:20;
-}
-
-#game{
-  display:none;
-}
-
 canvas{
   display:block;
 }
-
-/* ================= BOTÕES ================= */
 .btn{
   position:fixed;
+  bottom:20px;
   width:70px;
   height:70px;
-  background:rgba(255,255,255,0.35);
+  background:rgba(255,255,255,0.25);
   border-radius:50%;
 }
+.leftP1{left:20px}
+.rightP1{left:100px}
+.jumpP1{left:180px}
 
-/* P1 – Rikcat (esquerda) */
-#left{bottom:20px; left:20px;}
-#right{bottom:20px; left:110px;}
-#jump{bottom:20px; left:200px;}
-
-/* P2 – EduKat (direita) */
-#left2{bottom:20px; right:200px;}
-#right2{bottom:20px; right:110px;}
-#jump2{bottom:20px; right:20px;}
+.leftP2{right:180px}
+.rightP2{right:100px}
+.jumpP2{right:20px}
 </style>
 </head>
 
 <body>
 
-<div id="titleScreen">
-  <h1>🐱 Rikcat Adventure</h1>
-  <button id="soloBtn">Jogar Sozinho</button>
-  <button id="multiBtn">Multiplayer</button>
-</div>
+<canvas id="game"></canvas>
 
-<div id="rotate">Vire o celular</div>
+<!-- CONTROLES P1 -->
+<div class="btn leftP1" id="p1_left"></div>
+<div class="btn rightP1" id="p1_right"></div>
+<div class="btn jumpP1" id="p1_jump"></div>
 
-<div id="game">
-  <canvas id="canvas"></canvas>
+<!-- CONTROLES P2 -->
+<div class="btn leftP2" id="p2_left"></div>
+<div class="btn rightP2" id="p2_right"></div>
+<div class="btn jumpP2" id="p2_jump"></div>
 
-  <!-- Rikcat -->
-  <div id="left" class="btn"></div>
-  <div id="right" class="btn"></div>
-  <div id="jump" class="btn"></div>
-
-  <!-- EduKat -->
-  <div id="left2" class="btn"></div>
-  <div id="right2" class="btn"></div>
-  <div id="jump2" class="btn"></div>
-</div>
-
+<script src="enemies.js"></script>
 <script src="game.js"></script>
+
 </body>
 </html>
