--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Rikcat Adventure Online</title>
+<title>Rikcat Adventure — Boa Online 0.3</title>
 
 <style>
 body{
@@ -65,6 +65,10 @@ canvas{
   background:rgba(255,255,255,0.35);
   border-radius:50%;
 }
+.btn:active{
+  transform:scale(0.9);
+  background:rgba(255,255,255,0.6);
+}
 
 /* P1 */
 #left{bottom:20px; left:20px;}
@@ -72,11 +76,11 @@ canvas{
 #jump{bottom:20px; left:200px;}
 #attack{bottom:100px; left:110px;}
 
-/* P2 */
-#left2{bottom:20px; right:200px;}
-#right2{bottom:20px; right:110px;}
-#jump2{bottom:20px; right:20px;}
-#attack2{bottom:100px; right:110px;}
+/* P2 (online apenas visual) */
+#left2{bottom:20px; right:200px; display:none;}
+#right2{bottom:20px; right:110px; display:none;}
+#jump2{bottom:20px; right:20px; display:none;}
+#attack2{bottom:100px; right:110px; display:none;}
 </style>
 </head>
 
@@ -98,12 +102,6 @@ canvas{
   <div id="right" class="btn"></div>
   <div id="jump" class="btn"></div>
   <div id="attack" class="btn"></div>
-
-  <!-- EduKat -->
-  <div id="left2" class="btn"></div>
-  <div id="right2" class="btn"></div>
-  <div id="jump2" class="btn"></div>
-  <div id="attack2" class="btn"></div>
 </div>
 
 <script type="module" src="firebase.js"></script>
