--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Rikcat Adventure — OEO2</title>
+<title>Rikcat Adventure — Online Emotes 3</title>
 
 <style>
 body{
@@ -113,6 +113,7 @@ canvas{ display:block; }
 <div id="game">
   <canvas id="canvas"></canvas>
 
+  <!-- CONTROLES -->
   <div id="left" class="btn"></div>
   <div id="right" class="btn"></div>
   <div id="jump" class="btn"></div>
@@ -121,9 +122,14 @@ canvas{ display:block; }
   <!-- EMOTES -->
   <button id="emoteBtn">😺</button>
   <div id="emoteMenu">
-    <button class="emote">😀</button>
-    <button class="emote">😡</button>
-    <button class="emote">😴</button>
+    <button class="emote">😺</button>
+    <button class="emote">😻</button>
+    <button class="emote">😹</button>
+    <button class="emote">😼</button>
+    <button class="emote">😽</button>
+    <button class="emote">🙀</button>
+    <button class="emote">😿</button>
+    <button class="emote">😾</button>
   </div>
 </div>
 
